flexwrap 2 fix

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap
+    flex-wrap: wrap;
   }
 
   form div {
